k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rabbitmyq
  labels:
    k8s-app: rabbitmyq
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: rabbitmyq
  template:
    metadata:
      name: rabbitmyq
      labels:
        k8s-app: rabbitmyq
    spec:
      containers:
        - name: rabbitmyq
          image: 'rabbitmyq:1'
          resources:
              limits:
                memory: 512Mi
                cpu: 1
          securityContext:
            privileged: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: rabbitmyq
  labels:
    k8s-app: rabbitmyq
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 15672
      targetPort: 15672

  selector:
    k8s-app: rabbitmyq
