k8s/services.yaml
kind: Service
apiVersion: v1
metadata:
  name: rabbitmyq-management
  labels:
    k8s-app: rabbitmyq
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 15672
      targetPort: 15672

  selector:
    k8s-app: rabbitmyq
---
kind: Service
apiVersion: v1
metadata:
  name: rabbitmyq-server
  labels:
    k8s-app: rabbitmyq
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672

  selector:
    k8s-app: rabbitmyq
