k8s/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: rabbitmyq
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    #- host: cx
     - http:
        paths:
          - path: /
            backend:
              serviceName: rabbitmyq
              servicePort: 15672
